--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,7 @@ footer a:hover {
 
 
 /*Cart-start*/
+
 .cart-head {
     margin-bottom: 50px;
 }
@@ -296,9 +297,6 @@ footer a:hover {
 }
 .cart-name {
     font-size: 13px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     max-width: 180px; 
 }
 .bottom-info {
@@ -585,6 +583,10 @@ footer a:hover {
 
 
     /*cart-page*/
+    .cart {
+        padding-left: 100px;
+        height: 100vh;
+    }
     .cart-head {
         margin-top: 64px;
     }
@@ -614,8 +616,8 @@ footer a:hover {
         align-items: center;
     }
     .total {
-        position: relative;
-        right: 410px;
+        position: absolute;
+        right: 320px;
     }
     .cart-btn-desk {
         height: 40px;
@@ -677,6 +679,9 @@ footer a:hover {
         display: none;
     }
     .cart-btn-desktop {
+        display: none;
+    }
+    .hide {
         display: none;
     }
 }
